src/info/snapshots/onefetch__info__authors__test__author_info_with_two_authors.snap
---
source: src/info/authors.rs
expression: buffer
---
[38;2;255;255;255;1mAuthors[0m[39;1m:[0m [39m75% John Doe <john.doe@email.com> 1500[0m
[39m         80% Roberto Berto 240[0m

